@@ -490,6 +490,7 @@ All (GUI):
 - Added wxFont::SetSymbolicSize() and related methods.
 - Fix SVG files generation in locales using decimal comma (snowleopard).
 - Fix setting tooltips for generic wxSpinCtrl (Catalin Raceanu).
+- Added support for reading image resolutions from PNG images (scottb).
 
 GTK:
 
